[package]
name = "lightbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
dotenv = "0.15"
reqwest = { version = "0.11" }
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }